--- a/candidatos/templates/dashboard.html
+++ b/candidatos/templates/dashboard.html
@@ -713,10 +713,11 @@
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-3 text-red-200" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2.5">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20v-2c0-.456-.279-.86-.687-1.037M17 20a2 2 0 012 2h3m-5.856-2.857l-1.42 1.42a2 2 0 01-2.83-2.83l1.42-1.42M12 10a5 5 0 01-5-5h10a5 5 0 01-5 5z" />
                     </svg>
-                    Gestión de Visibilidad de Convocatorias
+                    Gestión de candidatos registrados
                 </h3>
                 
                 <button type="button" 
+                        data-modal-close 
                         class="text-red-200 hover:text-white transition-colors p-1 rounded-full hover:bg-red-700/50 transform active:scale-95" 
                         onclick="closeCandModal('candidatos-modal')">
                     <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
